<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="Name">Name</string>
    <string name="start">start</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="image_flag">Image_Flag</string>
    <string name="check">Check</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="trophy_image">trophy image</string>
    <string name="result">Result</string>
    <string name="finish">FINISH</string>
    <string name="username">username</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
</resources>