<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    android:gravity="center">


  <TextView
      android:text="@string/quiz_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="35sp"
      android:textColor="@color/white"
      android:textStyle="bold"
      android:layout_marginBottom="12dp">

  </TextView>


  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      app:cardCornerRadius="10dp"
      android:layout_marginTop="15dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:padding="15dp">

         <TextView
             android:textSize="35sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:text="@string/welcome">

         </TextView>


          <TextView
              android:text="@string/please_enter_your_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="15dp"
              android:textStyle="normal"
              android:textColor="@android:color/darker_gray"
              android:padding="10dp">


          </TextView>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:hint="@string/Name">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/nameInput"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName" />
          </com.google.android.material.textfield.TextInputLayout>

          <Button
              android:id="@+id/button_start"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:text="@string/start" />

      </LinearLayout>


  </androidx.cardview.widget.CardView>

  </LinearLayout>